# A2Summ

./: .gitignore  README.md  create_report_pdf.py  infer_video_summary.py  preprocess_video_to_h5.py  pyproject.toml  video_pipeline.py
docs/: report.md
helpers/: vsumm_helper.py
